aws/manifests/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ing
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /backend
        backend:
          serviceName: backend-service
          servicePort: 8090
      - path: /
        backend:
          serviceName: frontend-service
          servicePort: 8080
      - path: /*
        backend:
          serviceName: frontend-service
          servicePort: 8080
